--- a/app_notes.Rmd
+++ b/app_notes.Rmd
@@ -21,6 +21,9 @@ library(spdplyr)
 library(rmapshaper)
 library(raster)
 library(mapview)
+library(sf)
+library(httr)
+library(janitor)
 ```
 
 
@@ -31,8 +34,8 @@ zipcode_boundaries <- readOGR("../ZIP_CODE_040114/ZIP_CODE_040114.shp",
   layer = "ZIP_CODE_040114", verbose = FALSE)
 
 # try different table of zipcodes:
-#alt_zipcode_boundaries <- readOGR("../alt_nyczip/nyc_zip_code_tabulation_areas_polygons.shp",
-#  layer = "nyc_zip_code_tabulation_areas_polygons", verbose = FALSE)
+alt_zipcode_boundaries <- readOGR("../alt_nyczip/nyc_zip_code_tabulation_areas_polygons.shp",
+  layer = "nyc_zip_code_tabulation_areas_polygons", verbose = FALSE)
 
 # fortify the data to obtain dataframe for use by ggplot2
 zipcode_boundaries_fortified <- tidy(zipcode_boundaries, region = "ZIPCODE")
@@ -86,16 +89,17 @@ leaflet(alt_zipcode_boundaries) %>%
 ```{r}
 ### run it all again but this time with SF (faster?)
 
-library(sf)
-
-zipcode_sf <- st_read("../alt_nyczip/nyc_zip_code_tabulation_areas_polygons.shp")
+zipcode_sf <- st_read("alt_nyczip/nyc_zip_code_tabulation_areas_polygons.shp")
+altzip_sf <- st_read("../ZIP_CODE_040114/ZIP_CODE_040114.shp")
 
 ggplot() +
   geom_sf(data=zipcode_sf, aes(fill = borough)) 
 ```
 
 ```{r}
-mapview(zipcode_sf)
+# mapview function
+# mapview(zipcode_sf)
+mapview(altzip_sf)
 ```
 
 ```{r}
@@ -119,5 +123,170 @@ leaflet(zipcode_sf) %>%
 ```
 
 
+```{r}
+r <- httr::GET('http://data.beta.nyc//dataset/0ff93d2d-90ba-457c-9f7e-39e47bf2ac5f/resource/35dd04fb-81b3-479b-a074-a27a37888ce7/download/d085e2f8d0b54d4590b1e7d1f35594c1pediacitiesnycneighborhoods.geojson')
+nyc_neighborhoods <- readOGR(content(r,'text'), 'OGRGeoJSON', verbose = F)
+summary(nyc_neighborhoods)
 
+
+```
+
+```{r}
+leaflet(nyc_neighborhoods) %>%
+  addProviderTiles(providers$CartoDB.Positron) %>%  #add simpler basemap 
+  addPolygons(popup = ~neighborhood)
+```
+
+
+
+
+```{r}
+### combine zipcode geometric data with cleaned dataframe
+altzip_sf <- st_read("cleaned_data/ZIP_CODE_040114.shp")
+cleaned_sf <- geojsonsf::geojson_sf("cleaned_data/combined_covid_data.geojson")
+
+colnames(zipcode_sf)[which(names(zipcode_sf) == "postalcode")] <- "ZIPCODE"
+
+# make certain of zipcode overlap between the two dataframes
+setdiff(cleaned_sf$ZIPCODE, altzip_sf$ZIPCODE)
+
+# altzip only need ZIPCODE and geometry columns:
+altzip_sf_compact <- subset(altzip_sf, select = c('ZIPCODE', 'geometry'))
+
+```
+
+
+```{r}
+# 
+cleaned_sf_compact <- within(cleaned_sf, rm('geometry'))
+cleaned_sf_compact <- cleaned_sf_compact %>% st_set_geometry(NULL)
+class(cleaned_sf_compact)
+#combined_sf <- merge(cleaned_sf, altzip_sf_compact, by = 'ZIPCODE')
+```
+
+```{r}
+combined_sf <- merge(altzip_sf_compact, cleaned_sf_compact, by = 'ZIPCODE')
+
+class(combined_sf)
+
+mapview(combined_sf)
+```
+
+```{r}
+# let's try leaflet with this new combined_sf:
+
+pal <- colorFactor(rainbow(5), combined_sf$PO_NAME)
+
+leaflet(combined_sf) %>%
+  addProviderTiles(providers$CartoDB.Positron) %>%  #add simpler basemap 
+  addPolygons(stroke = TRUE, 
+              smoothFactor = 0.3, 
+              fillOpacity = 0.2,
+    highlight = highlightOptions(color = "white", weight = 10, bringToFront = TRUE))
+#  addPolylines(color = "#444444", 
+#               weight = 1, 
+#               smoothFactor = 0.5, 
+#               opacity = 1.0, 
+#               highlightOptions = highlightOptions(color = "white", 
+#                                                   weight = 5, 
+#                                                   bringToFront = F, 
+#                                                   opacity = 1))
+```
+
+```{r}
+# how is the massachusetts dataframe organised?
+ma_spdf = geojson_read("cleaned_data/cb_2018_ma_county_5m.json",  what = "sp")
+
+ma_spdf
+```
+
+```{r}
+# how is the nyc zipcode dataframe organised?
+ny_spdf = geojson_read("cleaned_data/nyc-zip-code-tabulation-areas-polygons.geojson",  what = "sp")
+#ny_spdf <- readOGR("cleaned_data/ZIP_CODE_040114.shp", layer = "ZIP_CODE_040114", verbose = #FALSE)
+ny_spdf
+```
+
+```{r}
+
+pal <- colorFactor(rainbow(5), ny_spdf$borough) 
+
+leaflet() %>%
+  addProviderTiles(providers$CartoDB.Positron) %>%  #add simpler basemap 
+  addPolygons(data = ny_spdf,
+              weight = 1,
+              stroke = TRUE, 
+              smoothFactor = 0.3, 
+              fillOpacity = 0.2,
+              fillColor = ~pal(ny_spdf$borough),
+    highlight = highlightOptions(color = "white", weight = 1, bringToFront = TRUE))
+```
+
+
+```{r}
+# incorporate dataframe, merge by zipcode
+df_leaflet = ny_spdf
+df_final = read.csv("cleaned_data/zip_count_rate_temp.csv", check.names = F, stringsAsFactors = F)
+
+df_final <- clean_names(df_final)
+
+ny_spdf@data
+```
+
+```{r}
+# rename ZIP column to postalCode to enable merge
+colnames(df_final)[which(names(df_final) == "zip")] <- "postalCode"
+
+df_final$postalCode <- as.character(df_final$postalCode)
+
+# recode DATE column as date data type
+df_final$date <- as.Date(df_final$date, "%Y-%m-%d")
+
+df_leaflet@data = left_join(df_leaflet@data, df_final,by = "postalCode")
+
+```
+
+```{r}
+# subset by date
+#target_date <- subset(df_final, DATE == as.Date("2020-04-21") )
+target_date <-  as.Date("2020-04-21")
+target_date_pos <- subset(df_leaflet@data, date==target_date, select=c('postalCode','positive'))
+
+mybins = seq(0, plyr::round_any(max(target_date_pos$positive), 1000, f=ceiling), by = 500)
+mypalette = colorBin( palette="YlOrRd", domain = target_date_pos$positive, na.color="transparent", bins=mybins)
+
+mytag = paste(
+  "Zipcode: ", df_leaflet@data$postalCode,"<br/>", 
+  "Positive cases: ",target_date_pos$positive, "<br/>", 
+  sep="") %>%
+  lapply(htmltools::HTML)
+
+```
+
+```{r}
+leaflet(df_leaflet) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>%  #add simpler basemap
+#  clearShapes() %>%
+  addPolygons(data =df_leaflet, 
+              fillColor = ~mypalette(target_date_pos$positive),
+              fillOpacity = 0.5,
+              stroke=TRUE,
+              weight=0.8,
+              color="#000000",
+              label = mytag,
+              labelOptions = labelOptions(
+                style = list("font-weight" = "normal", padding = "3px 8px"),
+                textsize = "10px",
+                direction = "auto"),
+              highlight = highlightOptions(color = "white", weight = 2, bringToFront = TRUE)) %>%
+  clearControls() %>%
+  addLegend( pal=mypalette, values=target_date_pos$positive, opacity=0.5, title = "Cases", position = "bottomleft" )
+```
+
+```{r}
+
+test_max <- max(df_final$total)
+test_max
+
+```
 
